# papra-mcp

./: .gitignore  AGENTS.md  README.md  papra_mcp.py  pyproject.toml  requirements.txt
tests/: test_document_content.py
