[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "papra-mcp"
version = "0.1.0"
description = "MCP server for the Papra document management API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["mcp", "papra", "document-management"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.25.0",
]

[project.urls]
Homepage = "https://github.com/Rigare/papra-mcp"
Repository = "https://github.com/Rigare/papra-mcp"

[project.scripts]
papra-mcp = "papra_mcp:main"
